--- a/R3/templates/b3-2in.html
+++ b/R3/templates/b3-2in.html
@@ -16,6 +16,14 @@
     </ul>
     {% endif %} {% endwith %}
     <form action="/" method="post">
+      <label for="year">年を入力してください</label><br />
+      <input
+        type="text"
+        id="year"
+        name="year"
+        placeholder="YYYY"
+        required
+      /><br />
       <label for="month">月を入力してください</label><br />
       <input
         type="text"
