--- a/R6/templates/a6-3.html
+++ b/R6/templates/a6-3.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>
-    <footer class="bg-dark text-white text-center py-3 mt-5">
+    <footer class="bg-dark text-white text-center py-3 mt-5 fixed-bottom">
       &copy; 2023 Yuta Nisihoka.
     </footer>
     <!-- Bootstrap JS and dependencies -->
